Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32066

Search results flickering in Terminal when typing

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 15.0.0
    • Qt Creator 15.0.0-rc1
    • Terminal
    • None
    • 2b7b8ef5a (15.0)

      Open terminal, produce some output there, then CTRL+F and type in a search word. Then try typing something in terminal.

      Each time a key is pressed, the search results flicker.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            madwinter Marcus Tillmanns
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes