src/libs/solutions/terminal/terminalview.h
@@ -224,6 +224,9 @@ protected:
 private:
     void scheduleViewportUpdate();
 
+signals:
+    void cleared();
+
 private:
     std::unique_ptr<TerminalViewPrivate> d;
 };
